@@ -558,6 +558,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\cybergarage\io\cfile_list.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\cybergarage\http\chttp.c"
 				>
 			</File>
